update number one to data cleaning

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a96f4f29",
+   "metadata": {},
+   "source": [
+    "# Covid Cased worldwide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bbc637b",
+   "metadata": {},
+   "source": [
+    "Importing data to notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ea99531f",
@@ -15,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4e74a1a2",
+   "id": "c900764c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,35 +39,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a3a37910",
+   "cell_type": "markdown",
+   "id": "ec29d204",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Date', 'Continent_Name', 'Two_Letter_Country_Code', 'Country_Region',\n",
-       "       'Province_State', 'positive', 'hospitalized', 'recovered', 'death',\n",
-       "       'total_tested', 'active', 'hospitalizedCurr', 'daily_tested',\n",
-       "       'daily_positive'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "covid_df.columns"
+    "Checking for the number of columns and rows"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a8ba2668",
-   "metadata": {},
+   "id": "5cb78412",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -69,20 +70,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b0e84c47",
+   "cell_type": "markdown",
+   "id": "7e119587",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#this means there is a total of 10,903 rowns and 14 columns"
+    "This means there is a total of 10,903 rowns and 14 columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb27bffc",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning Process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6cf22f",
+   "metadata": {},
+   "source": [
+    "For cleaning purposes, I am checking to see if any of the rows are missing data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30254b9c",
-   "metadata": {},
+   "id": "f16fd3e2",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,229 +134,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "07316e5d",
+   "cell_type": "markdown",
+   "id": "d38fdbe7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date                       0\n",
-       "Continent_Name             0\n",
-       "Two_Letter_Country_Code    0\n",
-       "Country_Region             0\n",
-       "Province_State             0\n",
-       "positive                   0\n",
-       "hospitalized               0\n",
-       "recovered                  0\n",
-       "death                      0\n",
-       "total_tested               0\n",
-       "active                     0\n",
-       "hospitalizedCurr           0\n",
-       "daily_tested               0\n",
-       "daily_positive             0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "covid_df.isnull().sum().sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "8f124c61",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Continent_Name</th>\n",
-       "      <th>Two_Letter_Country_Code</th>\n",
-       "      <th>Country_Region</th>\n",
-       "      <th>Province_State</th>\n",
-       "      <th>positive</th>\n",
-       "      <th>hospitalized</th>\n",
-       "      <th>recovered</th>\n",
-       "      <th>death</th>\n",
-       "      <th>total_tested</th>\n",
-       "      <th>active</th>\n",
-       "      <th>hospitalizedCurr</th>\n",
-       "      <th>daily_tested</th>\n",
-       "      <th>daily_positive</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-20</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>KR</td>\n",
-       "      <td>South Korea</td>\n",
-       "      <td>All States</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>All States</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>All States</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date Continent_Name Two_Letter_Country_Code Country_Region  \\\n",
-       "0  2020-01-20           Asia                      KR    South Korea   \n",
-       "1  2020-01-22  North America                      US  United States   \n",
-       "2  2020-01-22  North America                      US  United States   \n",
-       "3  2020-01-23  North America                      US  United States   \n",
-       "4  2020-01-23  North America                      US  United States   \n",
-       "\n",
-       "  Province_State  positive  hospitalized  recovered  death  total_tested  \\\n",
-       "0     All States         1             0          0      0             4   \n",
-       "1     All States         1             0          0      0             1   \n",
-       "2     Washington         1             0          0      0             1   \n",
-       "3     All States         1             0          0      0             1   \n",
-       "4     Washington         1             0          0      0             1   \n",
-       "\n",
-       "   active  hospitalizedCurr  daily_tested  daily_positive  \n",
-       "0       0                 0             0               0  \n",
-       "1       0                 0             0               0  \n",
-       "2       0                 0             0               0  \n",
-       "3       0                 0             0               0  \n",
-       "4       0                 0             0               0  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "covid_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "43958b8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data Cleaning Process"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ed62b88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# List all Columns"
+    "List of all columns to see if anything needs to be changed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "eff7afb2",
+   "id": "49af59b9",
    "metadata": {},
    "outputs": [
     {
@@ -362,19 +167,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53161738",
+   "cell_type": "markdown",
+   "id": "a652d184",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Created a dictionary to change the name of 3 of the column names"
+    "Created a dictionary to change 3 column names"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2be821d1",
+   "id": "efa5d9ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3ced4f4c",
+   "id": "3d36d542",
    "metadata": {},
    "outputs": [
     {
@@ -410,19 +213,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca570d1d",
+   "cell_type": "markdown",
+   "id": "c67a22b7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# This list was created to capitlize the first letter of each word"
+    "This list was created to capitlize the first letter of each word"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0863de0c",
+   "id": "77837535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "faf05ed0",
+   "id": "adaa9028",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0cf9f042",
+   "id": "5bc292d1",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "804b4d45",
+   "id": "16e8f873",
    "metadata": {},
    "outputs": [
     {
@@ -651,19 +452,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "c095690a",
+   "cell_type": "markdown",
+   "id": "2fe7bd4a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Contient Column has 6 unique values, top value is North America, which shows up 6452 times."
+    "Contient Column has 6 unique values, top value is North America, which shows up 6452 times."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "177a5406",
+   "id": "ef4f9d8a",
    "metadata": {},
    "outputs": [
     {
