2nd cleaning update

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a96f4f29",
+   "id": "9e2c792e",
    "metadata": {},
    "source": [
-    "# Covid Cased worldwide"
+    "# Covid Cases Worldwide"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4bbc637b",
+   "id": "22d78677",
+   "metadata": {},
+   "source": [
+    "The data being reviewed for this project shows Covid-19 cases worldwide from January 20, 2020 through June 1, 2020.\n",
+    "\n",
+    "Original dataset:\n",
+    "https://www.kaggle.com/datasets/lin0li/covid19testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b76be0",
    "metadata": {},
    "source": [
     "Importing data to notebook"
@@ -31,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c900764c",
+   "id": "b29bc66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec29d204",
+   "id": "f4517589",
    "metadata": {},
    "source": [
     "Checking for the number of columns and rows"
@@ -49,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5cb78412",
+   "id": "9a1db4f4",
    "metadata": {
     "scrolled": true
    },
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e119587",
+   "id": "f1698cc9",
    "metadata": {},
    "source": [
     "This means there is a total of 10,903 rowns and 14 columns"
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb27bffc",
+   "id": "aa4efdb7",
    "metadata": {},
    "source": [
     "# Data Cleaning Process"
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6cf22f",
+   "id": "2ce44dbd",
    "metadata": {},
    "source": [
     "For cleaning purposes, I am checking to see if any of the rows are missing data."
@@ -96,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f16fd3e2",
+   "id": "2470ace8",
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d38fdbe7",
+   "id": "b9fde76f",
    "metadata": {},
    "source": [
     "List of all columns to see if anything needs to be changed"
@@ -144,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "49af59b9",
+   "id": "ecc1533e",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a652d184",
+   "id": "88012bc2",
    "metadata": {},
    "source": [
     "Created a dictionary to change 3 column names"
@@ -177,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "efa5d9ef",
+   "id": "4d8d7689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3d36d542",
+   "id": "91934313",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c67a22b7",
+   "id": "1c0b884b",
    "metadata": {},
    "source": [
     "This list was created to capitlize the first letter of each word"
@@ -223,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "77837535",
+   "id": "20fc67d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "adaa9028",
+   "id": "0da08063",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5bc292d1",
+   "id": "50773503",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "16e8f873",
+   "id": "560336a1",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe7bd4a",
+   "id": "43f37a67",
    "metadata": {},
    "source": [
     "Contient Column has 6 unique values, top value is North America, which shows up 6452 times."
@@ -462,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ef4f9d8a",
+   "id": "fdf08520",
    "metadata": {},
    "outputs": [
     {
