another update before the last

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -5,7 +5,7 @@
    "id": "9e2c792e",
    "metadata": {},
    "source": [
-    "# COVID-19 Cases in The United States vs Worldwide"
+    "# COVID-19 Cases in The United States and Territories vs Worldwide"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "22d78677",
    "metadata": {},
    "source": [
-    "The data being reviewed for this project shows COVID-19 cases worldwide from January 20, 2020 through June 1, 2020. However, this data analysis project does a comparison of positive case in the United States with other countries.\n",
+    "The data being reviewed for this project shows COVID-19 cases worldwide from January 20, 2020 through June 1, 2020. However, this data analysis project does a comparison of positive case in the United States and territories with other countries.\n",
     "\n",
     "The main comparisons are:\n",
     "- Positive cases in the US and Worldwide\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 283,
    "id": "ea99531f",
    "metadata": {
     "scrolled": true
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 284,
    "id": "b29bc66e",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 285,
    "id": "e67d1280",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "[100 rows x 14 columns]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 286,
    "id": "8c1d6e65",
    "metadata": {
     "scrolled": true
@@ -489,7 +489,7 @@
        "10902       0                 0             0               0  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d247957",
+   "id": "230c4b57",
    "metadata": {},
    "source": [
     "After further analysis, I noticed that some data was duplicated. For example, there were rows showing cases per state, but also rows showing cases for all states. I dropped \"All State\" values"
@@ -508,8 +508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "id": "8c8fa6a0",
+   "execution_count": 287,
+   "id": "2fa132d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,8 +518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "7089595c",
+   "execution_count": 288,
+   "id": "71204047",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "10                 0             0               0  "
       ]
      },
-     "execution_count": 261,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 289,
    "id": "9a1db4f4",
    "metadata": {
     "scrolled": false
@@ -697,7 +697,7 @@
        "(7122, 13)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 290,
    "id": "2470ace8",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 291,
    "id": "ecc1533e",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 292,
    "id": "4d8d7689",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 293,
    "id": "91934313",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 294,
    "id": "20fc67d3",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 295,
    "id": "0da08063",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 296,
    "id": "5a060ee4",
    "metadata": {},
    "outputs": [],
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 297,
    "id": "14c323e9",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
        "10  2020-01-25        Oceania      Australia         3          0      0"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 298,
    "id": "50773503",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "max    370770.000000  65934.000000  23905.000000"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 299,
    "id": "560336a1",
    "metadata": {
     "scrolled": false
@@ -1141,7 +1141,7 @@
        "Name: Continent, dtype: object"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 300,
    "id": "fdf08520",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
        "Death      0.982478   0.813024  1.000000"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe9f1486",
+   "id": "fac26b68",
    "metadata": {},
    "source": [
     "Below you will the the total of positive cases, recovered cases and deaths in the United States and other countries as well."
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c9f6bf",
+   "id": "75e583d9",
    "metadata": {},
    "source": [
     "65,531,389 positive cases inthe United States vs 3,755,993 Positive cases in other countries"
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 301,
    "id": "5919a887",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
        "65531389"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 302,
    "id": "3acb22ce",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1271,7 @@
        "3755993"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 303,
    "id": "a4eb33fe",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
        "10548079"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 304,
    "id": "71530949",
    "metadata": {
     "scrolled": true
@@ -1325,7 +1325,7 @@
        "1685300"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 305,
    "id": "8ca9e61a",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
        "3423630"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 306,
    "id": "e998bb76",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1377,7 @@
        "215683"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8cd7af3",
+   "id": "a8590476",
    "metadata": {},
    "source": [
     "As seen below, there is Positive cases in the United States were extremely high in comparison to other countries. However, one thing to notice is that although many people recovered from COVID-19, there is a huge gap between positive cases and recovered cases. \n",
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 307,
    "id": "bf98ee19",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 308,
    "id": "8082c463",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 309,
    "id": "db16ac65",
    "metadata": {},
    "outputs": [
