another update, getting closer to last one

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "230c4b57",
+   "id": "abffede0",
    "metadata": {},
    "source": [
     "After further analysis, I noticed that some data was duplicated. For example, there were rows showing cases per state, but also rows showing cases for all states. I dropped \"All State\" values"
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "2fa132d1",
+   "id": "64a242b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "71204047",
+   "id": "1c6c3383",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
    "id": "f4517589",
    "metadata": {},
    "source": [
-    "Using .shape method to have a better idea of the number of columns and rows of the dataframe. This means there is a total of 10,903 rowns and 14 columns"
+    "Using .shape method to have a better idea of the number of columns and rows of the dataframe. This means there is a total of 7,122 rows and 13 columns"
    ]
   },
   {
@@ -1013,7 +1013,9 @@
    "cell_type": "code",
    "execution_count": 298,
    "id": "50773503",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1120,7 +1122,7 @@
    "id": "43f37a67",
    "metadata": {},
    "source": [
-    "Continent Column has 6 unique values, top value is North America, which shows up 6452 times. In other words, North America has the higher positive COVID-19 cases"
+    "Continent Column has 3 unique values, top value is North America, which shows up 6078 times. In other words, North America has the higher positive COVID-19 cases"
    ]
   },
   {
@@ -1154,7 +1156,9 @@
    "cell_type": "code",
    "execution_count": 300,
    "id": "fdf08520",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1223,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac26b68",
+   "id": "1dceeed8",
    "metadata": {},
    "source": [
     "Below you will the the total of positive cases, recovered cases and deaths in the United States and other countries as well."
@@ -1231,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e583d9",
+   "id": "fc8ec676",
    "metadata": {},
    "source": [
     "65,531,389 positive cases inthe United States vs 3,755,993 Positive cases in other countries"
@@ -1405,7 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8590476",
+   "id": "f38257aa",
    "metadata": {},
    "source": [
     "As seen below, there is Positive cases in the United States were extremely high in comparison to other countries. However, one thing to notice is that although many people recovered from COVID-19, there is a huge gap between positive cases and recovered cases. \n",
