updated some working and misspelling

--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abffede0",
+   "id": "9ff6f39d",
    "metadata": {},
    "source": [
     "After further analysis, I noticed that some data was duplicated. For example, there were rows showing cases per state, but also rows showing cases for all states. I dropped \"All State\" values"
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "64a242b6",
+   "id": "e9cdf8da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "1c6c3383",
+   "id": "69c88790",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
    "id": "88012bc2",
    "metadata": {},
    "source": [
-    "Created a dictionary to change 3 column names"
+    "Created a dictionary to change 2 column names"
    ]
   },
   {
@@ -877,7 +877,7 @@
    "id": "7d80f33d",
    "metadata": {},
    "source": [
-    "After going through this cleaning, I realized I wanted to drop some columns to make analyzis easier"
+    "After going through this cleaning, I realized I wanted to drop some columns to make analysis easier"
    ]
   },
   {
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dceeed8",
+   "id": "ad0f922e",
    "metadata": {},
    "source": [
     "Below you will the the total of positive cases, recovered cases and deaths in the United States and other countries as well."
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8ec676",
+   "id": "2df45aff",
    "metadata": {},
    "source": [
     "65,531,389 positive cases inthe United States vs 3,755,993 Positive cases in other countries"
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f38257aa",
+   "id": "a9661a71",
    "metadata": {},
    "source": [
     "As seen below, there is Positive cases in the United States were extremely high in comparison to other countries. However, one thing to notice is that although many people recovered from COVID-19, there is a huge gap between positive cases and recovered cases. \n",
