--- a/covid19.ipynb
+++ b/covid19.ipynb
@@ -1006,7 +1006,7 @@
    "id": "5af8675e",
    "metadata": {},
    "source": [
-    "Requirement 3: Analyze data"
+    "Requirement 3: Analyse data"
    ]
   },
   {
@@ -1122,7 +1122,7 @@
    "id": "43f37a67",
    "metadata": {},
    "source": [
-    "Continent Column has 3 unique values, top value is North America, which shows up 6078 times. In other words, North America has the higher positive COVID-19 cases"
+    "Continent column has 3 unique values, top value is North America, which shows up 6078 times. In other words, North America has the higher positive COVID-19 cases"
    ]
   },
   {
@@ -1238,7 +1238,7 @@
    "id": "2df45aff",
    "metadata": {},
    "source": [
-    "65,531,389 positive cases inthe United States vs 3,755,993 Positive cases in other countries"
+    "65,531,389 positive cases inthe United States vs 3,755,993 positive cases in other countries"
    ]
   },
   {
